--- a/app/globals.css
+++ b/app/globals.css
@@ -86,3 +86,34 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.fade-layer {
+  mask-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0) 20%,
+    rgba(0, 0, 0, 0) 80%,
+    rgba(0, 0, 0, 0)
+  );
+}
+
+.fade-layer--side {
+  mask-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 20%);
+}
+.text-radial {
+  background-image: radial-gradient(
+    ellipse farthest-side,
+    rgba(115, 32, 221, 0.2) 20%,
+    transparent 85%
+  );
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.snippet--gradient {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0),
+    rgba(23, 23, 23, 1)
+  );
+}
